--- a/front-end/package.json
+++ b/front-end/package.json
@@ -7,9 +7,10 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.7.0",
+    "materialize-css": "^1.0.0-rc.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-scripts": "4.0.2",
+    "react-scripts": "4.0.1",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
