--- a/front-end/package.json
+++ b/front-end/package.json
@@ -16,6 +16,8 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
+    "socket.io-client": "^3.1.1",
+    "styled-components": "^5.2.1",
     "use-places-autocomplete": "^1.9.1",
     "web-vitals": "^1.1.0"
   },
