--- a/back-end-fixed/package.json
+++ b/back-end-fixed/package.json
@@ -17,9 +17,9 @@
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
     "helmet": "^3.18.0",
+    "nodemon": "^2.0.7",
     "pg": "^8.5.0",
-    "socket.io": "^2.2.0",
-    "ws": "^7.0.0"
+    "socket.io": "^3.1.1"
   },
   "devDependencies": {
     "jest": "^24.8.0",
