--- a/front-end/package.json
+++ b/front-end/package.json
@@ -20,6 +20,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
+    "react-transition-group": "^4.4.1",
     "socket.io-client": "^3.1.1",
     "styled-components": "^5.2.1",
     "use-places-autocomplete": "^1.9.1",
