--- a/back-end/package.json
+++ b/back-end/package.json
@@ -1,17 +1,33 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "main": "index.js",
+  "description": "",
+  "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon node server.js"
+    "start": "node ./src/index.js",
+    "error": "TEST_ERROR=true node ./src/index.js",
+    "reset": "psql -U development -d helperr_development < ./src/db/schema/create.sql && psql -U development -d helperr_development < ./src/db/schema/development.sql",
+    "test:server": "NODE_ENV=test npm start"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1",
-    "nodemon": "^2.0.2",
-    "socket.io": "^3.1.1",
-    "socketio": "^1.0.0"
+    "body-parser": "^1.18.3",
+    "cors": "^2.8.5",
+    "dotenv": "^7.0.0",
+    "express": "^4.16.4",
+    "helmet": "^3.18.0",
+    "nodemon": "^2.0.7",
+    "pg": "^8.5.0",
+    "socket.io": "^3.1.1"
+  },
+  "devDependencies": {
+    "jest": "^24.8.0",
+    "supertest": "^4.0.2"
+  },
+  "jest": {
+    "setupFilesAfterEnv": [
+      "<rootDir>/src/setupTests.js"
+    ]
   }
 }
