--- a/front-end/package.json
+++ b/front-end/package.json
@@ -18,6 +18,7 @@
     "date-fns": "^2.17.0",
     "materialize-css": "^1.0.0-rc.2",
     "react": "^17.0.1",
+    "react-chat-widget": "^3.0.5",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
     "react-transition-group": "^4.4.1",
