--- a/front-end/package.json
+++ b/front-end/package.json
@@ -15,10 +15,12 @@
     "@testing-library/user-event": "^12.7.0",
     "autosuggest-highlight": "^3.1.1",
     "axios": "^0.21.1",
+    "cookie": "^0.4.1",
     "date-fns": "^2.17.0",
     "materialize-css": "^1.0.0-rc.2",
     "react": "^17.0.1",
     "react-chat-widget": "^3.0.5",
+    "react-cookie": "^4.0.3",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
     "react-transition-group": "^4.4.1",
