--- a/front-end/package.json
+++ b/front-end/package.json
@@ -21,6 +21,7 @@
     "react": "^17.0.1",
     "react-chat-widget": "^3.0.5",
     "react-cookie": "^4.0.3",
+    "react-cool-onclickoutside": "^1.6.0",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
     "react-transition-group": "^4.4.1",
