--- a/back-end/package.json
+++ b/back-end/package.json
@@ -4,10 +4,11 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
-    "start": "node ./src/index.js",
+    "start": "nodemon ./src/index.js",
     "error": "TEST_ERROR=true node ./src/index.js",
     "reset": "psql -U development -d helperr_development < ./src/db/schema/create.sql && psql -U development -d helperr_development < ./src/db/schema/development.sql",
-    "test:server": "NODE_ENV=test npm start"
+    "test:server": "NODE_ENV=test npm start",
+    "dev": "nodemon ./src/index.js"
   },
   "author": "",
   "license": "ISC",
@@ -15,11 +16,13 @@
     "body-parser": "^1.18.3",
     "cors": "^2.8.5",
     "dotenv": "^7.0.0",
+    "eiows": "^3.4.1",
     "express": "^4.16.4",
     "helmet": "^3.18.0",
     "nodemon": "^2.0.7",
     "pg": "^8.5.0",
-    "socket.io": "^3.1.1"
+    "socket.io": "^3.1.1",
+    "wscat": "^4.0.1"
   },
   "devDependencies": {
     "jest": "^24.8.0",
