--- a/front-end/package.json
+++ b/front-end/package.json
@@ -4,6 +4,9 @@
   "private": true,
   "dependencies": {
     "@date-io/date-fns": "^1.3.13",
+    "@fortawesome/fontawesome-svg-core": "^1.2.34",
+    "@fortawesome/free-solid-svg-icons": "^5.15.2",
+    "@fortawesome/react-fontawesome": "^0.1.14",
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.57",
@@ -17,12 +20,16 @@
     "axios": "^0.21.1",
     "cookie": "^0.4.1",
     "date-fns": "^2.17.0",
+    "lesshat": "^4.1.0",
+    "material-ui-rating": "^4.0.0-beta.2",
     "materialize-css": "^1.0.0-rc.2",
     "react": "^17.0.1",
+    "react-accessible-accordion": "^3.3.4",
     "react-chat-widget": "^3.0.5",
     "react-cookie": "^4.0.3",
     "react-cool-onclickoutside": "^1.6.0",
     "react-dom": "^17.0.1",
+    "react-fontawesome": "^1.7.1",
     "react-scripts": "4.0.1",
     "react-transition-group": "^4.4.1",
     "socket.io-client": "^3.1.1",
