--- a/back-end/package.json
+++ b/back-end/package.json
@@ -5,6 +5,7 @@
   "main": "src/index.js",
   "scripts": {
     "start": "nodemon ./src/index.js",
+    "debug": "node inspect ./src/index.js",
     "error": "TEST_ERROR=true node ./src/index.js",
     "reset": "psql -U development -d helperr_development < ./src/db/schema/create.sql && psql -U development -d helperr_development < ./src/db/schema/development.sql",
     "test:server": "NODE_ENV=test npm start",
