sending offers completed

--- a/front-end/.env.example
+++ b/front-end/.env.example
@@ -1,2 +1,13 @@
-REACT_APP_GOOGLE_API_KEY=
-REACT_APP_MAPBOX_API_KEY=
+PGHOST=localhost
+PGUSER=development
+PGDATABASE=helperr_development
+PGPASSWORD=development
+PGPORT=5432
+
+REACT_APP_GOOGLE_API_KEY='PRIVATE KEY'
+REACT_APP_MAPBOX_API_KEY='PRIVATE KEY'
+FAST_REFRESH=false
+CHOKIDAR_USEPOLLING=true
+REACT_APP_WEBSOCKET_URL=ws://localhost:8001
+PORT=8000
+CHOKIDAR_USEPOLLING=false
