--- a/back-end/.env.example
+++ b/back-end/.env.example
@@ -1,5 +1,5 @@
-PGHOST=
-PGUSER=
-PGDATABASE=
-PGPASSWORD=
-PGPORT=
+PGHOST=localhost
+PGUSER=development
+PGDATABASE=helperr_development
+PGPASSWORD=development
+PGPORT=5432
