--- a/front-end/package.json
+++ b/front-end/package.json
@@ -18,6 +18,7 @@
     "@testing-library/user-event": "^12.7.0",
     "autosuggest-highlight": "^3.1.1",
     "axios": "^0.21.1",
+    "bootstrap": "^4.6.0",
     "cookie": "^0.4.1",
     "date-fns": "^2.17.0",
     "lesshat": "^4.1.0",
@@ -25,7 +26,9 @@
     "materialize-css": "^1.0.0-rc.2",
     "react": "^17.0.1",
     "react-accessible-accordion": "^3.3.4",
+    "react-bootstrap": "^1.5.0",
     "react-chat-widget": "^3.0.5",
+    "react-collapsible": "^2.8.3",
     "react-cookie": "^4.0.3",
     "react-cool-onclickoutside": "^1.6.0",
     "react-dom": "^17.0.1",
