--- a/back-end/package.json
+++ b/back-end/package.json
@@ -7,7 +7,7 @@
     "start": "nodemon ./src/index.js",
     "debug": "node inspect ./src/index.js",
     "error": "TEST_ERROR=true node ./src/index.js",
-    "reset": "psql -U development -d helperr_development < ./src/db/schema/create.sql && psql -U development -d helperr_development < ./src/db/schema/development.sql",
+    "reset": "psql -U development -d handondemand_development < ./src/db/schema/create.sql && psql -U development -d handondemand_development < ./src/db/schema/development.sql",
     "test:server": "NODE_ENV=test npm start",
     "dev": "nodemon ./src/index.js"
   },
