--- a/back-end/package.json
+++ b/back-end/package.json
@@ -1,6 +1,10 @@
 {
   "name": "server",
   "version": "1.0.0",
+  "engines": {
+    "node": "10.16.x",
+    "npm": "6.x"
+  },
   "description": "",
   "main": "src/index.js",
   "scripts": {
@@ -23,7 +27,8 @@
     "nodemon": "^2.0.7",
     "pg": "^8.5.0",
     "socket.io": "^3.1.1",
-    "wscat": "^4.0.1"
+    "wscat": "^4.0.1",
+    "xmlhttprequest-ssl": "^1.6.0"
   },
   "devDependencies": {
     "jest": "^24.8.0",
