--- a/front-end/package.json
+++ b/front-end/package.json
@@ -41,12 +41,11 @@
     "web-vitals": "^1.1.0"
   },
   "scripts": {
-    "start": "PORT=8000 react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "proxy": "http://localhost:8001",
   "eslintConfig": {
     "extends": [
       "react-app",
