--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "error": "TEST_ERROR=true node ./src/index.js",
     "reset": "psql -U development -d helperr_development < ./src/db/schema/create.sql && psql -U development -d helperr_development < ./src/db/schema/development.sql",
     "test:server": "NODE_ENV=test npm start",
-    "dev": "nodemon ./src/index.js"
+    "dev": "nodemon ./src/index.js",
+    "heroku-postbuild": "npm install --prefix front-end && npm run build --prefix front-end"
   },
   "engines": {
     "npm": "6.9.0",
